[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=importlib"
testpaths = [
    "tests",
    "integration",
]
[project]
name = "twitch_clips"
version = "0.0.1"
description = "An API for the Clips of twitch"
authors = [{author = "Timothé Maurice", email = "timtonic@outlook.fr"}]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

